gitops/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    appProtocol: http
  selector:
    app: wordpress
